After simplification, sln to exercise

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <title>Controle de Estoque dos Tesouros</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="calice.ico">
   </head>
   <body>
     <h1>Gerenciador de Tesouros</h1>
-    <p>Yarr Harr, marujo! Aqui é o temido Barba-Ruiva e você deve me ajudar
-      a contabilizar os espólios das minhas aventuras!</p>
     <table>
       <caption>Estes são os tesouros acumulados do Barba-Ruiva em suas aventuras</caption>
       <thead>
@@ -57,5 +56,7 @@
         </tr>
       </tfoot>
     </table>
+    <p>Yarr Harr, marujo! Aqui é o temido Barba-Ruiva e você deve me ajudar
+      a contabilizar os espólios das minhas aventuras!</p>
   </body>
 </html>
